RESOLVED FIXED91178
RadioNodeList is not updated upon input type change
https://bugs.webkit.org/show_bug.cgi?id=91178
Summary RadioNodeList is not updated upon input type change
Ryosuke Niwa
Reported 2012-07-12 18:13:47 PDT
RadioNodeList shouldn't contain type=image but it doesn't get invalidated upon type attribute change.
Attachments
Fixes the bug (5.58 KB, patch)
2012-07-12 18:17 PDT, Ryosuke Niwa
ap: review+
webkit.review.bot: commit-queue-
Archive of layout-test-results from gce-cr-linux-06 (287.66 KB, application/zip)
2012-07-12 20:29 PDT, WebKit Review Bot
no flags
Ryosuke Niwa
Comment 1 2012-07-12 18:17:02 PDT
Created attachment 152119 [details] Fixes the bug
WebKit Review Bot
Comment 2 2012-07-12 20:29:37 PDT
Comment on attachment 152119 [details] Fixes the bug Attachment 152119 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13205912 New failing tests: http/tests/w3c/webperf/approved/navigation-timing/html/test_performance_attributes_exist_in_object.html
WebKit Review Bot
Comment 3 2012-07-12 20:29:41 PDT
Created attachment 152139 [details] Archive of layout-test-results from gce-cr-linux-06 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-06 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Alexey Proskuryakov
Comment 4 2012-07-12 22:37:53 PDT
Comment on attachment 152119 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=152119&action=review r=me since the change makes sense, but please investigate regression test failure. > Source/WebCore/ChangeLog:16 > + * dom/Document.h: Renamed InvalidateOnIdNameForAttrChange to InvalidateOnFormAttrChange > + since listing all attribute name isn't useful at this point. The new name is quite cryptic. If it's not possible to describe what this option does, perhaps its name should just say when it's used (even something blunt like InvalidateForRadioGroup).
Ryosuke Niwa
Comment 5 2012-07-13 00:01:41 PDT
(In reply to comment #4) > (From update of attachment 152119 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=152119&action=review > > r=me since the change makes sense, but please investigate regression test failure. I don't think that test failure is anything to do with this patch. It doesn't even use RadioNodeList. > > Source/WebCore/ChangeLog:16 > > + * dom/Document.h: Renamed InvalidateOnIdNameForAttrChange to InvalidateOnFormAttrChange > > + since listing all attribute name isn't useful at this point. > > The new name is quite cryptic. If it's not possible to describe what this option does, perhaps its name should just say when it's used (even something blunt like InvalidateForRadioGroup). I'll call it InvalidateForFormControls then since I'm intending to use it in HTMLFormCollection as well.
Ryosuke Niwa
Comment 6 2012-07-13 00:20:55 PDT
Note You need to log in before you can comment on or make changes to this bug.